NOOP: Fix up positioning when Canvas2 edit bar is visible
QA: No

--- a/app/styles/components.sass
+++ b/app/styles/components.sass
@@ -4,10 +4,9 @@ body.socrata-page
     @include transition(padding-top .2s linear)
   &.configurable
     @include transition(margin-right .2s linear)
+    padding-top: 32px
     .socrata-cf-top
       top: 0
-    #siteHeader
-      padding-top: 32px
   &.configuring
     .socrata-cf-top
       .not-edit-mode
